# intermittent

./: .gitignore  README.md  crystal_sort.py  gut_test.py  log_crystal_100_1_10.json  log_crystal_100_1_50.json  log_crystal_10_1_10.json  log_crystal_10_1_10_1.json  log_crystal_10_1_10_2.json  log_crystal_1_1_10.json  log_insertion_10_1_10.json  log_insertion_1_1_10.json  main.py  main_config_agent.py  process.py  pyproject.toml  requirements.txt  sort.py  test.ipynb  tools.py
data/: log_crystal_10000_50_50_04_3h48.json  log_crystal_1000_10_20_00_63.json  log_crystal_1000_10_20_03_63.json  log_crystal_1000_10_20_04_63.json  log_crystal_1000_1_10_00_37.json  log_crystal_1000_1_10_03_35.json  log_crystal_1000_1_10_04_37.json  log_crystal_1000_1_20_00_92.json  log_crystal_1000_1_20_03_95.json  log_crystal_1000_1_20_04_96.json  log_crystal_1000_1_50_00_467.json  log_crystal_1000_1_50_03_497.json  log_crystal_1000_1_50_04_491.json
pytoolbox/: pyvenv.cfg
pytoolbox/Scripts/: activate  activate.bat
pytoolbox_dev/Scripts/: activate  activate.bat
src/bokeh_agent/: scatter_agent.py
src/pytoolbox/: config_agent.py
toolbox/: crystal_sort.py  crystal_sort_test.py  sort.py  tree.py
toolbox/config_agent/: config.ini  config.toml  config_agent.py
