[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytoolbox"
version = "0.3.2"
authors = [
  { name="MossGoblin", email="hugolabs@gmail.com" },
]
description = "A library of miscellaneous tools"
readme = "README.md"
requires-python = ">=3.9.17"
dependencies = [
  'bokeh>=3.2.1',
  'pandas>=2.1.0'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MossGoblin/pytoolbox"
"Bug Tracker" = "https://github.com/MossGoblin/pytoolbox/issues"